--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/GATK_ResourceBundle_5777_b37_phiX174_short/genome/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/GATK_ResourceBundle_5777_b37_phiX174_short/genome/index.html
@@ -192,38 +192,10 @@ Default HG19 reference genome used by GPF
     </tr>
     <tr>
         <td class="nowrap">
-            <a href='statistics/1_statistic.yaml'>statistics/1_statistic.yaml</a>
+            <a href='statistics/'>statistics/</a>
         </td>
-        <td class="nowrap">389.0 B</td>
-        <td class="nowrap">70c82fe72004009eee59d3ffabd254e8</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
-            <a href='statistics/2_statistic.yaml'>statistics/2_statistic.yaml</a>
-        </td>
-        <td class="nowrap">390.0 B</td>
-        <td class="nowrap">d80e7bcdc1efb96abf51139478f8b7a6</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
-            <a href='statistics/X_statistic.yaml'>statistics/X_statistic.yaml</a>
-        </td>
-        <td class="nowrap">382.0 B</td>
-        <td class="nowrap">b7aff904faff32a2fb53ab9712aadd3b</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
-            <a href='statistics/reference_genome_statistic.yaml'>statistics/reference_genome_statistic.yaml</a>
-        </td>
-        <td class="nowrap">820.0 B</td>
-        <td class="nowrap">6960243370fd466a175e064cc9e123e0</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
-            <a href='statistics/stats_hash'>statistics/stats_hash</a>
-        </td>
-        <td class="nowrap">54.0 B</td>
-        <td class="nowrap">ba67778c5b7dd39d68fe120945cf8ab4</td>
+        <td class="nowrap"></td>
+        <td class="nowrap"></td>
     </tr>
 </tbody>
 </table>
