--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/internal/scores_incomplete_coverage/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/internal/scores_incomplete_coverage/index.html
@@ -93,13 +93,6 @@ h3,h4 {
 <tbody>
     <tr>
         <td class="nowrap">
-            <a href='MANIFEST'>MANIFEST</a>
-        </td>
-        <td class="nowrap">393.0 B</td>
-        <td class="nowrap">0861ec8c51f6d1909f42ef459e18fe4e</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
             <a href='genomic_resource.yaml'>genomic_resource.yaml</a>
         </td>
         <td class="nowrap">412.0 B</td>
@@ -128,31 +121,10 @@ h3,h4 {
     </tr>
     <tr>
         <td class="nowrap">
-            <a href='statistics/histogram_score0_incomplete_cov.png'>statistics/histogram_score0_incomplete_cov.png</a>
+            <a href='statistics/'>statistics/</a>
         </td>
-        <td class="nowrap">16.73 KB</td>
-        <td class="nowrap">c37eb1c557ec79e8be894d86a9211f7d</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
-            <a href='statistics/histogram_score0_incomplete_cov.yaml'>statistics/histogram_score0_incomplete_cov.yaml</a>
-        </td>
-        <td class="nowrap">2.09 KB</td>
-        <td class="nowrap">9a19dc320d21fef34dd78fa290bbb13e</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
-            <a href='statistics/min_max_score0_incomplete_cov.yaml'>statistics/min_max_score0_incomplete_cov.yaml</a>
-        </td>
-        <td class="nowrap">65.0 B</td>
-        <td class="nowrap">eddfe133c23241d1566c939701e16c9e</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
-            <a href='statistics/stats_hash'>statistics/stats_hash</a>
-        </td>
-        <td class="nowrap">4.89 KB</td>
-        <td class="nowrap">eee157b2f6d2a6736eaf5d78ff804e60</td>
+        <td class="nowrap"></td>
+        <td class="nowrap"></td>
     </tr>
 </tbody>
 </table>
