--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/phastCons100/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/phastCons100/index.html
@@ -114,24 +114,10 @@ h3,h4 {
     </tr>
     <tr>
         <td class="nowrap">
-            <a href='statistics/histogram_phastCons100.png'>statistics/histogram_phastCons100.png</a>
+            <a href='statistics/'>statistics/</a>
         </td>
-        <td class="nowrap">14.07 KB</td>
-        <td class="nowrap">efcdd4628dbf6987139798f1c30e21e3</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
-            <a href='statistics/histogram_phastCons100.yaml'>statistics/histogram_phastCons100.yaml</a>
-        </td>
-        <td class="nowrap">403.0 B</td>
-        <td class="nowrap">47c4c84f0598f19fd3ca842c3f2f28c9</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
-            <a href='statistics/stats_hash'>statistics/stats_hash</a>
-        </td>
-        <td class="nowrap">1.78 KB</td>
-        <td class="nowrap">bc8c83e9f2c3b16a8db0306b442ea368</td>
+        <td class="nowrap"></td>
+        <td class="nowrap"></td>
     </tr>
 </tbody>
 </table>
