--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/GRCh38-hg38/gene_models/refSeq_20200330/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/GRCh38-hg38/gene_models/refSeq_20200330/index.html
@@ -98,17 +98,10 @@ Default gene models used by GPF for HG38.
     </tr>
     <tr>
         <td class="nowrap">
-            <a href='statistics/stats.yaml'>statistics/stats.yaml</a>
+            <a href='statistics/'>statistics/</a>
         </td>
-        <td class="nowrap">185.0 B</td>
-        <td class="nowrap">088f8feb9e5264dc7579fe0556a891c7</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
-            <a href='statistics/stats_hash'>statistics/stats_hash</a>
-        </td>
-        <td class="nowrap">128.0 B</td>
-        <td class="nowrap">fca08b9d5b481f89f0f04ea303d5bea7</td>
+        <td class="nowrap"></td>
+        <td class="nowrap"></td>
     </tr>
 </tbody>
 </table>
