--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/hg38tohg19/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/hg38tohg19/index.html
@@ -77,10 +77,10 @@ hg38ToHg19.over.chain.gz
     </tr>
     <tr>
         <td class="nowrap">
-            <a href='statistics/stats_hash'>statistics/stats_hash</a>
+            <a href='statistics/'>statistics/</a>
         </td>
-        <td class="nowrap">11.0 B</td>
-        <td class="nowrap">6a99c575ab87f8c7d1ed1e52e7e349ce</td>
+        <td class="nowrap"></td>
+        <td class="nowrap"></td>
     </tr>
 </tbody>
 </table>
