--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/hg38tohg19/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/hg38tohg19/index.html
@@ -7,37 +7,78 @@ h3,h4 {
     margin-top:0.5em;
     margin-bottom:0.5em;
 }
-
+table {
+    border-collapse: collapse;
+}
+th, td {
+    padding: 10px;
+}
+th {
+    font-size: 20px;
+}
+td {
+    font-size: 18px;
+}
 
 
 </style>
 </head>
-<body>
+    <body>
 
-<h1>Resource</h1>
-<div>
-<table border="1">
-<tr><td><b>Id:</b></td><td>hg38/hg38tohg19</td></tr>
-<tr><td><b>Type:</b></td><td>liftover_chain</td></tr>
-<tr>
-<td><b>Summary:</b></td>
-<td>N/A</td>
-</tr>
-<tr>
-<td><b>Description:</b></td>
-<td>N/A</td>
-</tr>
-<tr>
-<td><b>Labels:</b></td>
-<td>
+    <h1>Resource</h1>
+    <div>
+        <table border="1">
+            <tr>
+                <td>
+                    <b>Id:</b>
+                </td>
+                <td>hg38/hg38tohg19</td>
+            </tr>
+            <tr>
+                <td>
+                    <b>Type:</b>
+                </td>
+                <td>liftover_chain</td>
+            </tr>
+            <tr>
+                <td>
+                    <b>Version:</b>
+                </td>
+                <td>0</td>
+            </tr>
+            <tr>
+                <td><b>Summary:</b></td>
+                <td>
+                    <div>
+                        <template shadowrootmode="open">N/A
+                        </template>
+                     </div>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <b>Description:</b>
+                </td>
+                <td>
+                    <div>
+                        <template shadowrootmode="open">N/A
+                        </template>
+                     </div>
+                </td>
+            </tr>
 
-</td>
-</tr>
-</table>
-</div>
+            <tr>
+                <td>
+                    <b>Labels:</b>
+                </td>
+                <td>
+                
+                </td>
+            </tr>
+        </table>
+    </div>
 
-
-
+    
 <hr>
 <h3>Liftover chain file:</h3>
 <a href="hg38ToHg19.over.chain.gz">
@@ -50,41 +91,39 @@ hg38ToHg19.over.chain.gz
 
 
 
+    <h1>Files</h1>
+    <table>
+    <thead>
+        <tr>
+            <th>Filename</th>
+            <th>Size</th>
+            <th>md5</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td class="nowrap">
+                <a href='genomic_resource.yaml'>genomic_resource.yaml</a>
+            </td>
+            <td class="nowrap">114.0 B</td>
+            <td class="nowrap">015277958aceaece752333016fa82695</td>
+        </tr>
+        <tr>
+            <td class="nowrap">
+                <a href='hg38ToHg19.over.chain.gz'>hg38ToHg19.over.chain.gz</a>
+            </td>
+            <td class="nowrap">1.19 MB</td>
+            <td class="nowrap">ff3031d93792f4cbb86af44055efd903</td>
+        </tr>
+        <tr>
+            <td class="nowrap">
+                <a href='statistics/'>statistics/</a>
+            </td>
+            <td class="nowrap"></td>
+            <td class="nowrap"></td>
+        </tr>
+    </tbody>
+    </table>
 
-<h1>Files</h1>
-<table>
-<thead>
-    <tr>
-        <th>Filename</th>
-        <th>Size</th>
-        <th>md5</th>
-    </tr>
-</thead>
-<tbody>
-    <tr>
-        <td class="nowrap">
-            <a href='genomic_resource.yaml'>genomic_resource.yaml</a>
-        </td>
-        <td class="nowrap">114.0 B</td>
-        <td class="nowrap">015277958aceaece752333016fa82695</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
-            <a href='hg38ToHg19.over.chain.gz'>hg38ToHg19.over.chain.gz</a>
-        </td>
-        <td class="nowrap">1.19 MB</td>
-        <td class="nowrap">ff3031d93792f4cbb86af44055efd903</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
-            <a href='statistics/'>statistics/</a>
-        </td>
-        <td class="nowrap"></td>
-        <td class="nowrap"></td>
-    </tr>
-</tbody>
-</table>
-
-
-</body>
+    </body>
 </html>
