--- a/dae_conftests/dae_conftests/tests/fixtures/test_repo/gene_sets/main/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/test_repo/gene_sets/main/index.html
@@ -7,37 +7,78 @@ h3,h4 {
     margin-top:0.5em;
     margin-bottom:0.5em;
 }
-
+table {
+    border-collapse: collapse;
+}
+th, td {
+    padding: 10px;
+}
+th {
+    font-size: 20px;
+}
+td {
+    font-size: 18px;
+}
 
 
 </style>
 </head>
-<body>
+    <body>
 
-<h1>Resource</h1>
-<div>
-<table border="1">
-<tr><td><b>Id:</b></td><td>gene_sets/main</td></tr>
-<tr><td><b>Type:</b></td><td>gene_set</td></tr>
-<tr>
-<td><b>Summary:</b></td>
-<td>N/A</td>
-</tr>
-<tr>
-<td><b>Description:</b></td>
-<td>N/A</td>
-</tr>
-<tr>
-<td><b>Labels:</b></td>
-<td>
+    <h1>Resource</h1>
+    <div>
+        <table border="1">
+            <tr>
+                <td>
+                    <b>Id:</b>
+                </td>
+                <td>gene_sets/main</td>
+            </tr>
+            <tr>
+                <td>
+                    <b>Type:</b>
+                </td>
+                <td>gene_set</td>
+            </tr>
+            <tr>
+                <td>
+                    <b>Version:</b>
+                </td>
+                <td>0</td>
+            </tr>
+            <tr>
+                <td><b>Summary:</b></td>
+                <td>
+                    <div>
+                        <template shadowrootmode="open">N/A
+                        </template>
+                     </div>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <b>Description:</b>
+                </td>
+                <td>
+                    <div>
+                        <template shadowrootmode="open">N/A
+                        </template>
+                     </div>
+                </td>
+            </tr>
 
-</td>
-</tr>
-</table>
-</div>
+            <tr>
+                <td>
+                    <b>Labels:</b>
+                </td>
+                <td>
+                
+                </td>
+            </tr>
+        </table>
+    </div>
 
-
-
+    
 <hr>
 <h2>Gene set ID: main</h2>
 
@@ -55,55 +96,53 @@ GeneSets
 
 
 
+    <h1>Files</h1>
+    <table>
+    <thead>
+        <tr>
+            <th>Filename</th>
+            <th>Size</th>
+            <th>md5</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td class="nowrap">
+                <a href='GeneSets/CHD8_target_genes.txt'>GeneSets/CHD8_target_genes.txt</a>
+            </td>
+            <td class="nowrap">233.0 B</td>
+            <td class="nowrap">e2f399a1067bc25e39097330dd83224a</td>
+        </tr>
+        <tr>
+            <td class="nowrap">
+                <a href='GeneSets/FMRP_Darnell.txt'>GeneSets/FMRP_Darnell.txt</a>
+            </td>
+            <td class="nowrap">175.0 B</td>
+            <td class="nowrap">0c283624811639f94feb70eaecd6e1f3</td>
+        </tr>
+        <tr>
+            <td class="nowrap">
+                <a href='GeneSets/main_candidates.txt'>GeneSets/main_candidates.txt</a>
+            </td>
+            <td class="nowrap">89.0 B</td>
+            <td class="nowrap">e0febb3a88fbdbe767ec91a92d35b754</td>
+        </tr>
+        <tr>
+            <td class="nowrap">
+                <a href='genomic_resource.yaml'>genomic_resource.yaml</a>
+            </td>
+            <td class="nowrap">118.0 B</td>
+            <td class="nowrap">af9a0254eb08c354abbd419a050fa2e3</td>
+        </tr>
+        <tr>
+            <td class="nowrap">
+                <a href='statistics/'>statistics/</a>
+            </td>
+            <td class="nowrap"></td>
+            <td class="nowrap"></td>
+        </tr>
+    </tbody>
+    </table>
 
-<h1>Files</h1>
-<table>
-<thead>
-    <tr>
-        <th>Filename</th>
-        <th>Size</th>
-        <th>md5</th>
-    </tr>
-</thead>
-<tbody>
-    <tr>
-        <td class="nowrap">
-            <a href='GeneSets/CHD8_target_genes.txt'>GeneSets/CHD8_target_genes.txt</a>
-        </td>
-        <td class="nowrap">233.0 B</td>
-        <td class="nowrap">e2f399a1067bc25e39097330dd83224a</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
-            <a href='GeneSets/FMRP_Darnell.txt'>GeneSets/FMRP_Darnell.txt</a>
-        </td>
-        <td class="nowrap">175.0 B</td>
-        <td class="nowrap">0c283624811639f94feb70eaecd6e1f3</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
-            <a href='GeneSets/main_candidates.txt'>GeneSets/main_candidates.txt</a>
-        </td>
-        <td class="nowrap">89.0 B</td>
-        <td class="nowrap">e0febb3a88fbdbe767ec91a92d35b754</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
-            <a href='genomic_resource.yaml'>genomic_resource.yaml</a>
-        </td>
-        <td class="nowrap">118.0 B</td>
-        <td class="nowrap">af9a0254eb08c354abbd419a050fa2e3</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
-            <a href='statistics/'>statistics/</a>
-        </td>
-        <td class="nowrap"></td>
-        <td class="nowrap"></td>
-    </tr>
-</tbody>
-</table>
-
-
-</body>
+    </body>
 </html>
