--- a/dae_conftests/dae_conftests/tests/fixtures/test_repo/gene_sets/test_mapping/index.html
+++ b/dae_conftests/dae_conftests/tests/fixtures/test_repo/gene_sets/test_mapping/index.html
@@ -7,37 +7,78 @@ h3,h4 {
     margin-top:0.5em;
     margin-bottom:0.5em;
 }
-
+table {
+    border-collapse: collapse;
+}
+th, td {
+    padding: 10px;
+}
+th {
+    font-size: 20px;
+}
+td {
+    font-size: 18px;
+}
 
 
 </style>
 </head>
-<body>
+    <body>
 
-<h1>Resource</h1>
-<div>
-<table border="1">
-<tr><td><b>Id:</b></td><td>gene_sets/test_mapping</td></tr>
-<tr><td><b>Type:</b></td><td>gene_set</td></tr>
-<tr>
-<td><b>Summary:</b></td>
-<td>N/A</td>
-</tr>
-<tr>
-<td><b>Description:</b></td>
-<td>N/A</td>
-</tr>
-<tr>
-<td><b>Labels:</b></td>
-<td>
+    <h1>Resource</h1>
+    <div>
+        <table border="1">
+            <tr>
+                <td>
+                    <b>Id:</b>
+                </td>
+                <td>gene_sets/test_mapping</td>
+            </tr>
+            <tr>
+                <td>
+                    <b>Type:</b>
+                </td>
+                <td>gene_set</td>
+            </tr>
+            <tr>
+                <td>
+                    <b>Version:</b>
+                </td>
+                <td>0</td>
+            </tr>
+            <tr>
+                <td><b>Summary:</b></td>
+                <td>
+                    <div>
+                        <template shadowrootmode="open">N/A
+                        </template>
+                     </div>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <b>Description:</b>
+                </td>
+                <td>
+                    <div>
+                        <template shadowrootmode="open">N/A
+                        </template>
+                     </div>
+                </td>
+            </tr>
 
-</td>
-</tr>
-</table>
-</div>
+            <tr>
+                <td>
+                    <b>Labels:</b>
+                </td>
+                <td>
+                
+                </td>
+            </tr>
+        </table>
+    </div>
 
-
-
+    
 <hr>
 <h2>Gene set ID: test_mapping</h2>
 
@@ -55,48 +96,46 @@ test-map.txt
 
 
 
+    <h1>Files</h1>
+    <table>
+    <thead>
+        <tr>
+            <th>Filename</th>
+            <th>Size</th>
+            <th>md5</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td class="nowrap">
+                <a href='genomic_resource.yaml'>genomic_resource.yaml</a>
+            </td>
+            <td class="nowrap">124.0 B</td>
+            <td class="nowrap">a2c6e1efdf34070d9b890eca85260b57</td>
+        </tr>
+        <tr>
+            <td class="nowrap">
+                <a href='test-map.txt'>test-map.txt</a>
+            </td>
+            <td class="nowrap">54.0 B</td>
+            <td class="nowrap">ecac75f4e2a086c19a979cfa2948f8d7</td>
+        </tr>
+        <tr>
+            <td class="nowrap">
+                <a href='test-mapnames.txt'>test-mapnames.txt</a>
+            </td>
+            <td class="nowrap">58.0 B</td>
+            <td class="nowrap">ca4985bb338250b762ec2d59df039018</td>
+        </tr>
+        <tr>
+            <td class="nowrap">
+                <a href='statistics/'>statistics/</a>
+            </td>
+            <td class="nowrap"></td>
+            <td class="nowrap"></td>
+        </tr>
+    </tbody>
+    </table>
 
-<h1>Files</h1>
-<table>
-<thead>
-    <tr>
-        <th>Filename</th>
-        <th>Size</th>
-        <th>md5</th>
-    </tr>
-</thead>
-<tbody>
-    <tr>
-        <td class="nowrap">
-            <a href='genomic_resource.yaml'>genomic_resource.yaml</a>
-        </td>
-        <td class="nowrap">124.0 B</td>
-        <td class="nowrap">a2c6e1efdf34070d9b890eca85260b57</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
-            <a href='test-map.txt'>test-map.txt</a>
-        </td>
-        <td class="nowrap">54.0 B</td>
-        <td class="nowrap">ecac75f4e2a086c19a979cfa2948f8d7</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
-            <a href='test-mapnames.txt'>test-mapnames.txt</a>
-        </td>
-        <td class="nowrap">58.0 B</td>
-        <td class="nowrap">ca4985bb338250b762ec2d59df039018</td>
-    </tr>
-    <tr>
-        <td class="nowrap">
-            <a href='statistics/'>statistics/</a>
-        </td>
-        <td class="nowrap"></td>
-        <td class="nowrap"></td>
-    </tr>
-</tbody>
-</table>
-
-
-</body>
+    </body>
 </html>
